re PR rtl-optimization/65693 (ICE in assign_by_spills, at lra-assigns.c:1419)

PR rtl-optimization/65693
	* combine.c (is_parallel_of_n_reg_sets): Move outside of
	#ifndef HAVE_cc0.

From-SVN: r221951